# translation

./: .gitignore  Dockerfile  README.md  config.py  pyproject.toml  requirements.txt
app/: config.py  main.py  queue_listener.py  send_task_queue.py
app/api/: endpoints.py
app/services/: translation_service.py
