[tool.poetry]
name = "translation_service"
version = "0.1.0"
description = "A service for text translation"
authors = ["Anonymous <anonymous@example.com>"]


[tool.poetry.dependencies]
python = "^3.10"
faststream = "^0.5.30"
aio-pika = "^9.5.0"
typing-extensions = "^4.12.2"
argostranslate = { version = "^1.9.6", extras = ["binary"] }
